feat: recovery password, new password and expired page

--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -28,8 +28,10 @@
     "packages.components.auth-form": "*",
     "packages.components.header": "*",
     "packages.components.modal": "*",
+    "packages.components.information-layout": "*",
     "packages.inputs.button": "*",
     "packages.inputs.input": "*",
+    "packages.rhf.inputs.input": "*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
