feat: add icons

--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -30,6 +30,20 @@
     "packages.components.modal": "*",
     "packages.components.information-layout": "*",
     "packages.icons.log-out": "*",
+    "packages.icons.send": "*",
+    "packages.icons.more-horizontal": "*",
+    "packages.icons.message-circle": "*",
+    "packages.icons.person-remove": "*",
+    "packages.icons.person-add": "*",
+    "packages.icons.eye-on": "*",
+    "packages.icons.eye-off": "*",
+    "packages.icons.copy": "*",
+    "packages.icons.pin": "*",
+    "packages.icons.heart": "*",
+    "packages.icons.email": "*",
+    "packages.icons.trash": "*",
+    "packages.icons.maximize": "*",
+    "packages.icons.edit": "*",
     "packages.inputs.button": "*",
     "packages.inputs.input": "*",
     "packages.rhf.inputs.input": "*",
