--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -30,8 +30,31 @@
     "packages.components.modal": "*",
     "packages.components.information-layout": "*",
     "packages.icons.log-out": "*",
+    "packages.icons.home-outline": "*",
+    "packages.icons.plus-square-outline": "*",
+    "packages.icons.plus-square": "*",
+    "packages.icons.person-outline": "*",
+    "packages.icons.home": "*",
+    "packages.icons.person": "*",
+    "packages.icons.trending-up": "*",
     "packages.inputs.button": "*",
     "packages.inputs.input": "*",
+    "packages.icons.bookmark-outline": "*",
+    "packages.icons.bookmark": "*",
+    "packages.icons.arrow-ios-back": "*",
+    "packages.icons.arrow-ios-down": "*",
+    "packages.icons.arrow-ios-forward": "*",
+    "packages.icons.arrow-ios-up": "*",
+    "packages.icons.block": "*",
+    "packages.icons.calendar": "*",
+    "packages.icons.calendar-outline": "*",
+    "packages.icons.close": "*",
+    "packages.icons.expand": "*",
+    "packages.icons.image": "*",
+    "packages.icons.image-outline": "*",
+    "packages.icons.plus-circle": "*",
+    "packages.icons.plus-circle-outline": "*",
+    "packages.icons.search": "*",
     "packages.rhf.inputs.input": "*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
