--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "settings.config-eslint",
+  "name": "eslint-config-custom",
   "version": "0.0.0",
   "main": "index.js",
   "private": true,
