--- a/packages/packages.components.header/package.json
+++ b/packages/packages.components.header/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "^8.37.0",
     "typescript": "5.0.2",
-    "settings.config-eslint": "*",
+    "eslint-config-custom": "*",
     "settings.config-typescript": "*"
   }
 }
