--- a/packages/packages.icons.trending-up/package.json
+++ b/packages/packages.icons.trending-up/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "^8.37.0",
     "typescript": "5.0.2",
+    "settings.config-eslint": "*",
     "settings.config-typescript": "*"
   }
 }
