--- a/packages/theme.scheme/package.json
+++ b/packages/theme.scheme/package.json
@@ -13,7 +13,7 @@
     "eslint": "^8.37.0",
     "react": "^18.2.0",
     "typescript": "5.0.2",
-    "settings.config-eslint": "*",
+    "eslint-config-custom": "*",
     "settings.config-typescript": "*"
   }
 }
