--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -48,20 +48,27 @@
     "packages.icons.plus-circle": "*",
     "packages.icons.plus-circle-outline": "*",
     "packages.icons.search": "*",
-    "packages.icons.send-outline": "*",
-    "packages.icons.more-horizontal-outline": "*",
-    "packages.icons.message-circle-outline": "*",
-    "packages.icons.person-remove-outline": "*",
-    "packages.icons.person-add-outline": "*",
-    "packages.icons.eye-on-outline": "*",
-    "packages.icons.eye-off-outline": "*",
-    "packages.icons.copy-outline": "*",
-    "packages.icons.pin-outline": "*",
-    "packages.icons.heart-outline": "*",
-    "packages.icons.email-outline": "*",
-    "packages.icons.trash-outline": "*",
-    "packages.icons.maximize-outline": "*",
-    "packages.icons.edit-outline": "*",
+    "packages.icons.send": "*",
+    "packages.icons.more-horizontal": "*",
+    "packages.icons.message-circle": "*",
+    "packages.icons.person-remove": "*",
+    "packages.icons.person-add": "*",
+    "packages.icons.eye-on": "*",
+    "packages.icons.eye-off": "*",
+    "packages.icons.copy": "*",
+    "packages.icons.pin": "*",
+    "packages.icons.heart": "*",
+    "packages.icons.email": "*",
+    "packages.icons.trash": "*",
+    "packages.icons.maximize": "*",
+    "packages.icons.edit": "*",
+    "packages.icons.home-outline": "*",
+    "packages.icons.plus-square-outline": "*",
+    "packages.icons.plus-square": "*",
+    "packages.icons.person-outline": "*",
+    "packages.icons.home": "*",
+    "packages.icons.person": "*",
+    "packages.icons.trending-up": "*",
     "packages.rhf.inputs.input": "*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
