--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -55,6 +55,27 @@
     "packages.icons.plus-circle": "*",
     "packages.icons.plus-circle-outline": "*",
     "packages.icons.search": "*",
+    "packages.icons.send": "*",
+    "packages.icons.more-horizontal": "*",
+    "packages.icons.message-circle": "*",
+    "packages.icons.person-remove": "*",
+    "packages.icons.person-add": "*",
+    "packages.icons.eye-on": "*",
+    "packages.icons.eye-off": "*",
+    "packages.icons.copy": "*",
+    "packages.icons.pin": "*",
+    "packages.icons.heart": "*",
+    "packages.icons.email": "*",
+    "packages.icons.trash": "*",
+    "packages.icons.maximize": "*",
+    "packages.icons.edit": "*",
+    "packages.icons.home-outline": "*",
+    "packages.icons.plus-square-outline": "*",
+    "packages.icons.plus-square": "*",
+    "packages.icons.person-outline": "*",
+    "packages.icons.home": "*",
+    "packages.icons.person": "*",
+    "packages.icons.trending-up": "*",
     "packages.rhf.inputs.input": "*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
