feat: add icons

--- a/packages/packages.icons.message-circle-outline/package.json
+++ b/packages/packages.icons.message-circle-outline/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "packages.icons.send",
+  "name": "packages.icons.message-circle-outline",
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
