--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": ">=16.0.0"
   },
   "devDependencies": {
-    "settings.config-eslint": "*",
+    "eslint-config-custom": "*",
     "prettier": "^2.8.7",
     "turbo": "^1.8.8"
   }
