feat: react-query-devtools and fix: duplication module eslint

--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.29.1",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "axios": "^1.3.4",
@@ -27,60 +28,60 @@
     "next": "13.2.4",
     "packages.components.auth-form": "*",
     "packages.components.header": "*",
-    "packages.components.modal": "*",
     "packages.components.information-layout": "*",
-    "packages.icons.log-out": "*",
-    "packages.icons.home-outline": "*",
-    "packages.icons.plus-square-outline": "*",
-    "packages.icons.plus-square": "*",
-    "packages.icons.person-outline": "*",
-    "packages.icons.home": "*",
-    "packages.icons.person": "*",
-    "packages.icons.trending-up": "*",
-    "packages.inputs.button": "*",
-    "packages.inputs.input": "*",
-    "packages.icons.bookmark-outline": "*",
-    "packages.icons.bookmark": "*",
+    "packages.components.modal": "*",
     "packages.icons.arrow-ios-back": "*",
     "packages.icons.arrow-ios-down": "*",
     "packages.icons.arrow-ios-forward": "*",
     "packages.icons.arrow-ios-up": "*",
     "packages.icons.block": "*",
+    "packages.icons.bookmark": "*",
+    "packages.icons.bookmark-outline": "*",
     "packages.icons.calendar": "*",
     "packages.icons.calendar-outline": "*",
     "packages.icons.close": "*",
-    "packages.icons.expand": "*",
-    "packages.icons.image": "*",
-    "packages.icons.image-outline": "*",
-    "packages.icons.plus-circle": "*",
-    "packages.icons.plus-circle-outline": "*",
-    "packages.icons.search": "*",
-    "packages.icons.send-outline": "*",
-    "packages.icons.more-horizontal": "*",
-    "packages.icons.message-circle": "*",
-    "packages.icons.message-circle-outline": "*",
-    "packages.icons.person-remove": "*",
-    "packages.icons.person-remove-outline": "*",
-    "packages.icons.person-add": "*",
-    "packages.icons.person-add-outline": "*",
-    "packages.icons.eye-on": "*",
-    "packages.icons.eye-on-outline": "*",
-    "packages.icons.eye-off": "*",
-    "packages.icons.eye-off-outline": "*",
     "packages.icons.copy": "*",
     "packages.icons.copy-outline": "*",
-    "packages.icons.pin": "*",
-    "packages.icons.pin-outline": "*",
-    "packages.icons.heart": "*",
-    "packages.icons.heart-outline": "*",
-    "packages.icons.email": "*",
-    "packages.icons.email-outline": "*",
-    "packages.icons.trash": "*",
-    "packages.icons.trash-outline": "*",
-    "packages.icons.maximize": "*",
-    "packages.icons.maximize-outline": "*",
     "packages.icons.edit": "*",
     "packages.icons.edit-outline": "*",
+    "packages.icons.email": "*",
+    "packages.icons.email-outline": "*",
+    "packages.icons.expand": "*",
+    "packages.icons.eye-off": "*",
+    "packages.icons.eye-off-outline": "*",
+    "packages.icons.eye-on": "*",
+    "packages.icons.eye-on-outline": "*",
+    "packages.icons.heart": "*",
+    "packages.icons.heart-outline": "*",
+    "packages.icons.home": "*",
+    "packages.icons.home-outline": "*",
+    "packages.icons.image": "*",
+    "packages.icons.image-outline": "*",
+    "packages.icons.log-out": "*",
+    "packages.icons.maximize": "*",
+    "packages.icons.maximize-outline": "*",
+    "packages.icons.message-circle": "*",
+    "packages.icons.message-circle-outline": "*",
+    "packages.icons.more-horizontal": "*",
+    "packages.icons.person": "*",
+    "packages.icons.person-add": "*",
+    "packages.icons.person-add-outline": "*",
+    "packages.icons.person-outline": "*",
+    "packages.icons.person-remove": "*",
+    "packages.icons.person-remove-outline": "*",
+    "packages.icons.pin": "*",
+    "packages.icons.pin-outline": "*",
+    "packages.icons.plus-circle": "*",
+    "packages.icons.plus-circle-outline": "*",
+    "packages.icons.plus-square": "*",
+    "packages.icons.plus-square-outline": "*",
+    "packages.icons.search": "*",
+    "packages.icons.send-outline": "*",
+    "packages.icons.trash": "*",
+    "packages.icons.trash-outline": "*",
+    "packages.icons.trending-up": "*",
+    "packages.inputs.button": "*",
+    "packages.inputs.input": "*",
     "packages.rhf.inputs.input": "*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -94,8 +95,8 @@
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "eslint": "^8.37.0",
-    "prettier": "^2.8.7",
     "eslint-config-custom": "*",
+    "prettier": "^2.8.7",
     "settings.config-typescript": "*",
     "typescript": "5.0.2"
   }
